Added address view and fixed some issues.

--- a/guicegwt/src/main/resources/open/pp/sample/guicegwt/client/view/PersonDetView.ui.xml
+++ b/guicegwt/src/main/resources/open/pp/sample/guicegwt/client/view/PersonDetView.ui.xml
@@ -42,7 +42,7 @@
 				style="clear: both;background-color: black;height: 2px;"></div>
 		</g:HTMLPanel>
 		<div
-			style="  float: left;height: 60px;width: 180px;margin-top: 20px;">
+			style="  float: left;width: 180px;margin-top: 20px;">
 			<g:Button ui:field="addAddress" text='Add Address'></g:Button>
 			<g:Button ui:field="save" text='Save'></g:Button>
 		</div>
